# gvd_frs

./: .dockerignore  .env.example  .gitignore  Dockerfile.minio  README.md  alembic.ini  docker-compose.yml  init-minio.sh  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1a9d9e4d7242_tenants_and_license_fix.py  b6cb7200645d_initial_migration_create_tenants_and_.py
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  demo.py  health.py  license.py  tenant.py
app/core/: config.py  dependencies.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: base_repository.py  database.py
app/models/: __init__.py  license.py  tenant.py
app/schemas/: base.py  license.py  tenant.py
app/services/: base_service.py  license_service.py  tenant_service.py
app/utils/: helpers.py
apps/groups/: __init__.py  controller.py  models.py  routes.py  tests.py  utils.py
apps/media_uploads/: controller.py  models.py  routes.py  utils.py
apps/poi/: controller.py  models.py  routes.py  test.py  utils.py
config/: database.py  settings.py
docs/: GVD-FRS-API-Collection.postman_collection.json  GVD-FRS-Development.postman_environment.json  GVD-FRS-Production.postman_environment.json  README.md
middleware/: auth.py  error_handler.py
s3_service/: __init__.py  minio_config.py  minio_service.py  rustfs_client.py  rustfs_service.py
tests/: conftest.py
tests/unit/: test_endpoints.py
